tenant-multiple-namespaces-ksvc/policies-templates/allow-all-in-ns.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-all-in-ns
  namespace: <tenant-ns>
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: <tenant-ns>
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: <tenant-ns>
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system  # allow traffic to kube-proxy (not always needed).
  policyTypes:
    - Ingress
    - Egress
