tenant-multiple-namespaces-ksvc/policies-templates/allow-egress-other-tenant-ns.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-other-tenant-ns
  namespace: <tenant-ns>
spec:
  podSelector: {}
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            kourier.knative.dev/listenen: <tenant-listener>
  policyTypes:
    - Egress
