tenant-multiple-namespaces-ksvc/policies-templates/allow-ingress-from-other-tenant-ns.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-from-other-tenant-ns
  namespace: <tenant-ns>
spec:
  podSelector: {}
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kourier.knative.dev/listenent: <tenant-listener>
  policyTypes:
    - Ingress
