tenant-multiple-namespaces-ksvc/policies-templates/allow-tenant-ingress-from-tenant.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-tenant-ingress-from-tenant
  namespace: <tenant-ns>
spec:
  podSelector: {}
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kourier-system
      ports:
        - protocol: TCP
          port: <listener-port>
  policyTypes:
    - Egress
